Fixed the Popup menu on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,6 +41,10 @@ body {
     padding-right: 20px;
 }
 
+.header.mobileShow {
+    padding-left: 0px;
+}
+
 .mobileVersion {
     display: none;
 }
@@ -2786,7 +2790,7 @@ body {
     .header {
         padding-top: 0px;
         position: relative;
-        padding-left: 20px;
+        /* padding-left: 20px; */
     }
 
     .header>.header_logo {
@@ -2840,7 +2844,7 @@ body {
         position: fixed;
         top: 0px;
         display: block;
-
+        padding-left: 20px;
         overflow: scroll;
     }
 
